--- a/css/style.css
+++ b/css/style.css
@@ -475,18 +475,12 @@ voice2
   background-color: #D6EEBF;
 }
 
-.slick-box{
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 0 3%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+.voice-box{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 10px;
 }
-.slick__item{
-  width: 49%;
-}
+
 
 /* -----------------------------------------------------------------------------------------------------------------------
 cv1
@@ -558,17 +552,17 @@ action
   margin: 0 auto 20px;
 }
 .action_circle_message {
-  width: 100%; /* 丸のサイズに合わせる */
-  padding: 0 10px; /* 丸の内側に余白つける */
+  width: 100%; 
+  padding: 0 10px; 
   display: inline-block;
   text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  white-space: nowrap; /* 変な所で改行しない */
-  overflow-wrap: break-word; /* 長すぎたら単語で折り返す */
-  word-break: keep-all; /* 日本語の途中で改行しない */
+  white-space: nowrap;
+  overflow-wrap: break-word; 
+  word-break: keep-all; 
 }
 
 /* -----------------------------------------------------------------------------------------------------------------------
@@ -1135,18 +1129,7 @@ introduction1
   padding: 20px;
 }
 
-/* -----------------------------------------------------------------------------------------------------------------------
-voice2
--------------------------------------------------------------*/
-.slick-box{
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 0;
-}
-.slick__item{
-  padding: 0 5px;
-  min-width: 350px;
-}
+
 
 
 /* -----------------------------------------------------------------------------------------------------------------------
@@ -1289,10 +1272,10 @@ introduction2
 width: 100%;
 padding: 0 3%;
 text-align: center;
-top: auto; /* top無効化 */
-bottom: 20px; /* 下に配置 */
+top: auto; 
+bottom: 20px; 
 right: 0;
-transform: translateY(0); /* 中央寄せ解除 */
+transform: translateY(0); 
 }
 .introduction2_message h4{
   margin-bottom: 10px;
@@ -1311,13 +1294,20 @@ text-align: center;
 top: auto; 
 bottom: 8%; 
 right: 0;
-transform: translateY(0); /* 中央寄せ解除 */
+transform: translateY(0);
 }
 .introduction3_message h4{
   margin-bottom: 10px;
 }
 
+/* -----------------------------------------------------------------------------------------------------------------------
+voice2
+-------------------------------------------------------------*/
 
+
+.voice-box{
+  grid-template-columns: 1fr;
+}
 }
 
 @media (max-width:500px){
